# KBEngine-Nex

./: .gitattributes  .gitignore  README.md  UPDATE.md  appveyor.yml  build.bat  build.sh  install_linux.sh  install_macos.sh  install_windows.bat
CI/: install_linux_step1_deps.sh  install_linux_step2_configure.sh  install_linux_step3_build.sh
gitee/: install_linux.sh  install_windows.bat
kbe/res/server/log4cxx_properties_defaults/: baseapp.properties  baseappmgr.properties  bots.properties  cellapp.properties  cellappmgr.properties  dbmgr.properties  interfaces.properties  logger.properties  loginapp.properties
kbe/src/: CMakeLists.txt  convert_info.txt  convert_to_utf8.ps1  guiconsole.sln  kbengine nex.sln  vcpkg.json
kbe/src/cmakefile/: OpenSSL.cmake
kbe/src/lib/client_lib/: CMakeLists.txt  client_interface.h  client_interface_macros.h  client_lib.vcxproj  clientapp.cpp  clientapp.h  clientobjectbase.cpp  clientobjectbase.h  config.cpp  config.h  entity.cpp  entity.h  moveto_point_handler.cpp  moveto_point_handler.h
kbe/src/lib/common/: CMakeLists.txt  blowfish.cpp  blowfish.h  common.h  common.vcxproj  deadline.h  kbekey.h  kbeversion.cpp  kbeversion.h  md5.h  memorystream.h  memorystream_converter.h  objectpool.h  platform.h  refcountable.h  rsa.h  singleton.h  ssl.cpp  ssl.h  stdfindif_handers.h  strutil.cpp  strutil.h  task.h  tasks.h  timer.h  timestamp.cpp  timestamp.h
kbe/src/lib/db_interface/: CMakeLists.txt  db_interface.cpp  db_interface.h  db_interface.vcxproj  db_tasks.h  db_threadpool.h  entity_table.cpp  entity_table.h  kbe_tables.h
kbe/src/lib/db_mongodb/: CMakeLists.txt  db_interface_mongodb.cpp  db_interface_mongodb.h  db_mongodb.vcxproj  entity_table_mongodb.cpp  entity_table_mongodb.h  kbe_table_mongodb.cpp
kbe/src/lib/db_mysql/: CMakeLists.txt  common.h  db_context.h  db_interface_mysql.cpp  db_interface_mysql.h  db_mysql.vcxproj  entity_table_mysql.cpp  entity_table_mysql.h  kbe_table_mysql.cpp  kbe_table_mysql.h  read_entity_helper.h  remove_entity_helper.h  sqlstatement.h  write_entity_helper.h
kbe/src/lib/db_redis/: CMakeLists.txt  db_context.h  db_interface_redis.cpp  db_interface_redis.h  db_redis.vcxproj  entity_table_redis.cpp  entity_table_redis.h  kbe_table_redis.cpp  kbe_table_redis.h  redis_helper.h  redis_watcher.cpp
kbe/src/lib/dependencies/jwsmtp/jwsmtp/jwsmtp/: CMakeLists.txt
kbe/src/lib/dependencies/tinyxml/: CMakeLists.txt  xmltest.cpp
kbe/src/lib/dependencies/tmxparser/: CMakeLists.txt
kbe/src/lib/dependencies/tmxparser/tmxparser/: tmxparser.vcxproj
kbe/src/lib/entitydef/: CMakeLists.txt  common.h  datatype.h  datatypes.cpp  datatypes.h  detaillevel.h  entities.h  entity_call.cpp  entity_call.h  entity_component.cpp  entity_component.h  entity_component_call.h  entity_garbages.h  entity_macro.h  entitycallabstract.cpp  entitycallabstract.h  entitydef.cpp  entitydef.vcxproj  fixedarray.h  fixeddict.cpp  fixeddict.h  method.cpp  property.cpp  property.h  property.inl  py_entitydef.cpp  remote_entity_method.h  scriptdef_module.cpp  scriptdef_module.h  volatileinfo.h
kbe/src/lib/helper/: CMakeLists.txt  console_helper.h  crashhandler.cpp  crashhandler.h  debug_helper.cpp  debug_option.h  eventhistory_stats.h  helper.vcxproj  profile.h  profile_handler.cpp  profile_handler.h  sys_info.cpp  watcher.h
kbe/src/lib/math/: CMakeLists.txt  math.h  math.vcxproj
kbe/src/lib/navigation/: CMakeLists.txt  navigation.cpp  navigation.h  navigation.vcxproj  navigation_handle.h  navigation_mesh_handle.cpp  navigation_mesh_handle.h  navigation_tile_handle.cpp  navigation_tile_handle.h
kbe/src/lib/network/: CMakeLists.txt  address.h  bundle.cpp  bundle.h  bundle_broadcast.cpp  bundle_broadcast.h  channel.cpp  channel.h  common.cpp  common.h  encryption_filter.cpp  endpoint.inl  fixed_messages.cpp  fixed_messages.h  http_utility.cpp  http_utility.h  interface_defs.h  interfaces.h  message_handler.cpp  message_handler.h  network.vcxproj  network_stats.h  poller_select.h  tcp_packet.cpp  tcp_packet_receiver.cpp  tcp_packet_sender.cpp  udp_packet.cpp  udp_packet_receiver.cpp  websocket_packet_filter.cpp  websocket_protocol.cpp  websocket_protocol.h
kbe/src/lib/pyscript/: CMakeLists.txt  copy.h  map.cpp  map.h  math.h  pickler.h  py_compression.h  py_gc.h  py_macros.h  py_memorystream.h  pyprofile.cpp  pyprofile.h  pyscript.vcxproj  pystruct.h  pyurl.h  pywatcher.cpp  pywatcher.h  script.cpp  script.h  scriptobject.h  scriptstderr.h  scriptstdout.h  scriptstdouterr.cpp  sequence.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
kbe/src/lib/python/: CMakeLists.txt
kbe/src/lib/python/Objects/: call.c
kbe/src/lib/pythonBuild/: pythonBuild.vcxproj
kbe/src/lib/resmgr/: CMakeLists.txt  resmgr.cpp  resmgr.h  resmgr.vcxproj
kbe/src/lib/server/: CMakeLists.txt  asyncio_helper.cpp  asyncio_helper.h  callbackmgr.h  common.h  components.cpp  components.h  entity_app.h  forward_messagebuffer.cpp  forward_messagebuffer.h  globaldata_client.cpp  globaldata_client.h  globaldata_server.cpp  globaldata_server.h  id_component_querier.cpp  idallocate.h  kbemain.h  pendingLoginmgr.cpp  pendingLoginmgr.h  py_file_descriptor.h  python_app.cpp  python_app.h  sendmail_threadtasks.h  server.vcxproj  server_errors.h  serverapp.cpp  serverapp.h  serverconfig.cpp  serverconfig.h  shutdown_handler.h  signal_handler.cpp  telnet_handler.cpp  telnet_handler.h
kbe/src/lib/thread/: CMakeLists.txt  concurrency.h  thread.vcxproj  threadguard.h  threadmutex.h  threadpool.cpp  threadpool.h  threadtask.h
kbe/src/lib/xml/: CMakeLists.txt  xml.h  xml.vcxproj
kbe/src/server/baseapp/: CMakeLists.txt  archiver.cpp  backuper.cpp  backuper.h  baseapp.cpp  (+19 more)
(+263 files in other folders)
